--- a/public/assets/css/main-site-styles.css
+++ b/public/assets/css/main-site-styles.css
@@ -51,7 +51,7 @@ body {
   text-transform: uppercase;
   margin-bottom: 20px;
   padding-bottom: 0;
-  color: #354144;
+  color: #32025a;
   position: relative;
   z-index: 2;
 }
@@ -229,7 +229,7 @@ body {
 .team .member .pic {
   overflow: hidden;
   width: 180px;
-  border-radius: 50%;
+  border-radius: 70%;
 }
 
 .team .member .pic img {
@@ -344,4 +344,43 @@ body {
   margin-left: 70px;
   line-height: 24px;
   font-size: 14px;
+}
+
+/* Login Form Styles */
+.form-signin {
+  width: 100%;
+  max-width: 400px;
+  padding: 40px;
+  margin: auto;
+}
+.form-signin .checkbox {
+  font-weight: 400;
+}
+.form-signin .form-control {
+  position: relative;
+  box-sizing: border-box;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  height: auto;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+
+.icofont-email{
+  width: 70px;
+  height: 120px;
 }
