Adding About Freitech Solutions files and content

--- a/public/assets/css/main-site-styles.css
+++ b/public/assets/css/main-site-styles.css
@@ -51,7 +51,7 @@ body {
   text-transform: uppercase;
   margin-bottom: 20px;
   padding-bottom: 0;
-  color: #32025a;
+  color: #22013d;
   position: relative;
   z-index: 2;
 }
