--- a/public/assets/css/main-site-styles.css
+++ b/public/assets/css/main-site-styles.css
@@ -6,9 +6,18 @@
   user-select: none;
 }
 
+nav li a:active{
+  color: #fff;
+}
+
 li, a {
   text-decoration: none;
 }
+
+.navbar{
+  background: linear-gradient(rgba(58, 36, 71, 0.952), rgba(28, 3, 39, 0.959)) !important;
+}
+
 
 @media (min-width: 768px) {
   .bd-placeholder-img-lg {
@@ -18,26 +27,43 @@ li, a {
 
 body {
   padding-top: 3rem;
-  color: #5a5a5a;
+  color: #000000;
   overflow-x: hidden;
 }
 
-.carousel {
-  margin-bottom: 4rem;
+#slider{
+  background-color: rgba(0, 0, 0, 0.856) !important;
 }
 
 .carousel-caption {
-  margin-bottom: 10rem;
+  margin-bottom: 8rem;
   bottom: 3rem;
   z-index: 10;
 }
 
-/* Declare heights because of positioning of img element */
-
-.carousel-item {
+.carousel-item{
+  position: relative !important;
   height: 40rem;
 }
 
+.carousel-item>img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 40rem;
+}
+
+.dark-overlay{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(rgba(58, 36, 71, 0.952), rgba(28, 3, 39, 0.959));
+}
+
+/* Declare heights because of positioning of img element */
 
 .section-title {
   text-align: center;
@@ -56,17 +82,21 @@ body {
   z-index: 2;
 }
 
-.carousel-item>img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 32rem;
-}
+
 
 #about {
-  background-color: rgba(221, 227, 230, 0.733);
+  background: linear-gradient(rgba(243, 245, 247, 0.993), rgba(245, 247, 252, 0.959)), url("../img/portfolio/portfolio-1.jpg") fixed center center;
   padding: 2rem;
+}
+
+#about .icon-box > h3{
+  color:  rgba(32, 1, 46, 0.959) !important;
+}
+
+#about .icon-box {
+  margin-left: 70px;
+  line-height: 24px;
+  font-size: 14px;
 }
 
 @media (min-width: 40em) {
@@ -92,14 +122,19 @@ body {
 --------------------------------------------------------------*/
 
 #footer {
-  background: #1f2627;
+  background: linear-gradient(rgba(58, 36, 71, 0.952), rgba(28, 3, 39, 0.959));
   padding: 0 0 20px 0;
   color: #fff;
   font-size: 14px;
 }
 
+.btn-explore{
+  background: linear-gradient(rgba(105, 17, 156, 0.952), rgba(59, 2, 83, 0.959));
+  color: #fff !important;
+}
+
 #footer .footer-top {
-  background: #2a3336;
+  background: linear-gradient(rgba(75, 35, 99, 0.952), rgba(46, 5, 63, 0.959));
   border-bottom: 1px solid #354144;
   padding: 60px 0 30px 0;
 }
@@ -126,7 +161,7 @@ body {
 #footer .footer-top .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #354144;
+  background: #21023b;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -139,7 +174,7 @@ body {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #01b1d7;
+  background: #350257;
   color: #fff;
   text-decoration: none;
 }
@@ -187,7 +222,7 @@ body {
 }
 
 #footer .footer-top .footer-links ul a:hover {
-  color: #27d8fe;
+  color: #c27ef0;
 }
 
 #footer .footer-top .footer-newsletter form {
@@ -216,7 +251,7 @@ body {
 --------------------------------------------------------------*/
 
 .team {
-  background: #fff;
+  background: linear-gradient(rgba(233, 235, 236, 0.952), rgba(189, 190, 192, 0.959)), url("../img/portfolio/portfolio-1.jpg") fixed center center;
 }
 
 .team .member {
@@ -300,7 +335,7 @@ body {
 }
 
 .team .member .social a:hover {
-  background: #01b1d7;
+  background: #320153;
 }
 
 .team .member .social a+a {
@@ -310,17 +345,20 @@ body {
 /*--------------------------------------------------------------
 # Services
 --------------------------------------------------------------*/
+.services{
+  background: linear-gradient(rgba(247, 249, 250, 0.952), rgba(236, 240, 248, 0.959)), url("../img/portfolio/portfolio-3.jpg") fixed center center;
+}
 
 .services .icon-box {
   margin-bottom: 20px;
   padding: 30px;
   border-radius: 6px;
-  background: #fff;
+  background: linear-gradient(rgba(247, 249, 250, 0.952), rgba(232, 237, 247, 0.959));
 }
 
 .services .icon-box i {
   float: left;
-  color: #01b1d7;
+  color: linear-gradient(rgba(73, 12, 109, 0.952), rgba(34, 2, 48, 0.959));
   font-size: 40px;
 }
 
@@ -337,19 +375,25 @@ body {
 }
 
 .services .icon-box:hover h4 a {
-  color: #01b1d7;
+  color: #320153;
 }
 
-.services .icon-box p {
+ p {
   margin-left: 70px;
   line-height: 24px;
   font-size: 14px;
 }
 
 /* Login Form Styles */
+.auth{
+  color: #fff !important;
+  background: linear-gradient(rgba(58, 36, 71, 0.952), rgba(28, 3, 39, 0.959)), url("../img/portfolio/portfolio-4.jpg") fixed center center;
+}
+
+
 .form-signin {
   width: 100%;
-  max-width: 500px;
+  max-width: 420px;
   padding: 40px;
   margin: auto;
 }
@@ -359,7 +403,7 @@ body {
 .form-signin .form-control {
   position: relative;
   box-sizing: border-box;
-  margin-bottom: 1rem;
+  margin-bottom: 0.1rem;
   margin-top: 1rem;
   height: auto;
   padding: 10px;
@@ -379,8 +423,63 @@ body {
   border-top-right-radius: 0;
 }
 
+/*
+ * Sidebar
+ */
 
-.icofont-email{
-  width: 70px;
-  height: 120px;
+.sidebar {
+  position: fixed;
+  top: 0;
+  /* rtl:raw:
+  right: 0;
+  */
+  bottom: 0;
+  /* rtl:remove */
+  left: 0;
+  z-index: 100; /* Behind the navbar */
+  padding: 48px 0 0; /* Height of navbar */
+  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
 }
+
+@media (max-width: 767.98px) {
+  .sidebar {
+    top: 5rem;
+  }
+}
+
+.sidebar-sticky {
+  position: relative;
+  top: 0;
+  height: calc(100vh - 48px);
+  padding-top: .5rem;
+  overflow-x: hidden;
+  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+}
+
+.sidebar .nav-link {
+  font-weight: 500;
+  color: #333;
+}
+
+.sidebar .nav-link .feather {
+  margin-right: 4px;
+  color: #727272;
+}
+
+.sidebar .nav-link.active {
+  color: #007bff;
+}
+
+.sidebar .nav-link:hover .feather,
+.sidebar .nav-link.active .feather {
+  color: inherit;
+}
+
+.sidebar-heading {
+  font-size: .75rem;
+  text-transform: uppercase;
+}
+
+/*
+ * Navbar
+ */
