--- a/public/assets/css/main-site-styles.css
+++ b/public/assets/css/main-site-styles.css
@@ -6,25 +6,25 @@
   user-select: none;
 }
 
-nav li a:active{
+nav li a:active {
   color: #fff;
 }
 
-section{
+section {
   margin-bottom: 1rem;
 }
 
-section .row{
-  margin-top: 1rem;
+section .row {
+  margin-top: 2rem;
 }
+
 li, a {
   text-decoration: none;
 }
 
-.navbar{
+.navbar {
   background: linear-gradient(rgba(58, 36, 71, 0.952), rgba(28, 3, 39, 0.959)) !important;
 }
-
 
 @media (min-width: 768px) {
   .bd-placeholder-img-lg {
@@ -39,7 +39,7 @@ body {
   scroll-behavior: smooth;
 }
 
-#slider{
+#slider {
   background-color: rgba(0, 0, 0, 0.856) !important;
 }
 
@@ -49,7 +49,7 @@ body {
   z-index: 10;
 }
 
-.carousel-item{
+.carousel-item {
   position: relative !important;
   height: 35rem;
 }
@@ -62,7 +62,7 @@ body {
   height: 35rem;
 }
 
-.dark-overlay{
+.dark-overlay {
   position: absolute;
   top: 0px;
   left: 0px;
@@ -90,7 +90,7 @@ body {
   z-index: 2;
 }
 
-li .nav-link, li .dropdown-item{
+li .nav-link, li .dropdown-item {
   font-size: 0.8rem;
 }
 
@@ -99,8 +99,8 @@ li .nav-link, li .dropdown-item{
   padding: 0.5rem;
 }
 
-#about .icon-box > h3{
-  color:  rgba(32, 1, 46, 0.959) !important;
+#about .icon-box>h3 {
+  color: rgba(32, 1, 46, 0.959) !important;
 }
 
 @media (min-width: 40em) {
@@ -121,6 +121,17 @@ li .nav-link, li .dropdown-item{
   }
 }
 
+.card.card-img-holder {
+  position: relative;
+}
+
+.card.card-img-holder .card-img-absolute {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+}
+
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
@@ -132,7 +143,7 @@ li .nav-link, li .dropdown-item{
   font-size: 14px;
 }
 
-.btn-explore{
+.btn-explore {
   background: linear-gradient(rgba(105, 17, 156, 0.952), rgba(59, 2, 83, 0.959));
   color: #fff !important;
 }
@@ -349,50 +360,51 @@ li .nav-link, li .dropdown-item{
 /*--------------------------------------------------------------
 # Services
 --------------------------------------------------------------*/
-.services{
+
+.services {
   background: linear-gradient(rgba(247, 249, 250, 0.952), rgba(236, 240, 248, 0.959)), url("../img/portfolio/portfolio-3.jpg") fixed center center;
 }
 
- .icon-box {
+.icon-box {
   margin-bottom: 20px;
   padding: 30px;
   border-radius: 6px;
   background: linear-gradient(rgba(247, 249, 250, 0.952), rgba(232, 237, 247, 0.959));
 }
 
- .icon-box i {
+.icon-box i {
   float: left;
   color: linear-gradient(rgba(73, 12, 109, 0.952), rgba(34, 2, 48, 0.959));
   font-size: 40px;
 }
 
- .icon-box h4 {
+.icon-box h4 {
   margin-left: 70px;
   font-weight: 700;
   margin-bottom: 15px;
   font-size: 18px;
 }
 
- .icon-box h4 a {
+.icon-box h4 a {
   color: #354144;
   transition: 0.3s;
 }
 
- .icon-box:hover h4 a {
+.icon-box:hover h4 a {
   color: #320153;
 }
 
- p {
+p {
   margin-left: 5px;
   line-height: 24px;
   font-size: 14px;
 }
 
 /* Login Form Styles */
-.auth{
+
+.auth {
   background: linear-gradient(rgba(58, 36, 71, 0.952), rgba(28, 3, 39, 0.959)), url("../img/portfolio/portfolio-4.jpg") fixed center center;
 }
-
 
 .form-signin {
   width: 100%;
@@ -400,9 +412,11 @@ li .nav-link, li .dropdown-item{
   padding: 40px;
   margin: auto;
 }
+
 .form-signin .checkbox {
   font-weight: 400;
 }
+
 .form-signin .form-control {
   position: relative;
   box-sizing: border-box;
@@ -412,14 +426,17 @@ li .nav-link, li .dropdown-item{
   padding: 10px;
   font-size: 16px;
 }
+
 .form-signin .form-control:focus {
   z-index: 2;
 }
+
 .form-signin input[type="email"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
+
 .form-signin input[type="password"] {
   margin-bottom: 10px;
   border-top-left-radius: 0;
@@ -439,8 +456,10 @@ li .nav-link, li .dropdown-item{
   bottom: 0;
   /* rtl:remove */
   left: 0;
-  z-index: 100; /* Behind the navbar */
-  padding: 48px 0 0; /* Height of navbar */
+  z-index: 100;
+  /* Behind the navbar */
+  padding: 48px 0 0;
+  /* Height of navbar */
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
 }
 
@@ -456,7 +475,8 @@ li .nav-link, li .dropdown-item{
   height: calc(100vh - 48px);
   padding-top: .5rem;
   overflow-x: hidden;
-  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+  overflow-y: auto;
+  /* Scrollable contents if viewport is shorter than content. */
 }
 
 .sidebar .nav-link {
@@ -473,8 +493,7 @@ li .nav-link, li .dropdown-item{
   color: #007bff;
 }
 
-.sidebar .nav-link:hover .feather,
-.sidebar .nav-link.active .feather {
+.sidebar .nav-link:hover .feather, .sidebar .nav-link.active .feather {
   color: inherit;
 }
 
@@ -487,8 +506,8 @@ li .nav-link, li .dropdown-item{
  * Design Banner for all Services Pages
  */
 
- .design-banner{
-   width: 100%;
-   padding: 2rem;
-   background: linear-gradient(rgba(130, 80, 153, 0.952), rgba(72, 4, 117, 0.959)), url("../img/portfolio/portfolio-1.jpg") fixed center center;
-  }
+.design-banner {
+  width: 100%;
+  padding: 2rem;
+  background: linear-gradient(rgba(130, 80, 153, 0.952), rgba(72, 4, 117, 0.959)), url("../img/portfolio/portfolio-1.jpg") fixed center center;
+}
