removed about content from homepage

--- a/public/assets/css/main-site-styles.css
+++ b/public/assets/css/main-site-styles.css
@@ -132,6 +132,11 @@ li .nav-link, li .dropdown-item {
   height: 100%;
 }
 
+
+.card-size{
+  height: 200px;
+}
+
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
