Improved Homepage look and feel

--- a/public/assets/css/main-site-styles.css
+++ b/public/assets/css/main-site-styles.css
@@ -137,6 +137,9 @@ li .nav-link, li .dropdown-item {
   height: 200px;
 }
 
+.icon-box-size{
+  height: 300px;
+}
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
